--- a/home-4.html
+++ b/home-4.html
@@ -19,9 +19,206 @@
 </head>
 
 <body>
-	<!-- Navbar START -->
-	<!-- Navbar END -->
-	
+	<!-- Header START -->
+	<!-- Header END -->
+
+	<!-- Top Product START -->
+	<section id="top-product">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<h4 class="product-title">SUPERB AUDIO EXPERIENCE OVER 25 YEARS</h4>
+					<h3 class="product-subtitle">Audio experience to enhance any lifestyle</h3>
+				</div>
+			</div>
+			<div class="row align-items-center s-mrt-60">
+				<div class="col-sm-12 col-md-6 col-lg-5">
+					<img src="img/products/top-product.png" alt="" class="product-rev">
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-4 offset-lg-2">
+						<h4 class="product-name">The best headphones of 2020</h4>
+						<p class="product-info">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+						<div class="products-view">
+							<div class="product-item-1">
+								<img src="img/products/product-item-1.png" alt="">
+							</div>
+							<div class="product-item-2">
+								<img src="img/products/product-item-2.png" alt="">
+								<div class="basket">
+									<i class="fas fa-shopping-basket"></i>
+								</div>
+							</div>
+							<div class="product-item-3">
+								<img src="img/products/product-item-3.png" alt="">
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Top Product END -->
+	<!-- Top Hero START -->
+	<section id="top-hero">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-8 col-lg-4 s-mrb-80">
+					<h4 class="top-hero-title">BEST TRUE WIRELESS EARBUDS OF 2020</h4>
+					<h2 class="top-hero-subtitle">Top noise-canceling headphone</h2>
+					<p class="product-info s-mrt-30">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+					<div class="top-hero-infobox s-mrt-40">
+						<img src="img/icon/shop-icon-1.png" alt="">
+						<p class="product-info">With many different headphones to choose from, which ones are the best of the best? </p>
+					</div>
+					<div class="top-hero-infobox s-mrt-40">
+						<img src="img/icon/shop-icon-2.png" alt="">
+						<p class="product-info">With many different headphones to choose from, which ones are the best of the best? </p>
+					</div>
+					<div class="top-hero-infobox s-mrt-40">
+						<img src="img/icon/shop-icon-3.png" alt="">
+						<p class="product-info">With many different headphones to choose from, which ones are the best of the best? </p>
+					</div>
+					<div class="btn-box">
+						<a href="#" class="h-4-btn-1">EXPLORE MORE <i class="fas fa-chevron-right"></i></a>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-4 col-lg-7 offset-lg-1 top-bg-media">
+					<img src="img/content/image-8.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Top Hero END -->
+	<!-- Blog START -->
+	<section id="blog">
+		<div class="container">
+			<div class="row align-items-center s-mrb-80">
+				<div class="col-sm-12 col-md-6 col-lg-5">
+					<h4 class="product-title">SUPERB AUDIO EXPERIENCE OVER 25 YEARS</h4>
+					<h3 class="product-subtitle">Audio experience to enhance any lifestyle</h3>
+					<p class="product-info s-mrt-40">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-5 offset-lg-2 blog-items-pic">
+					<img src="img/blog/shop-blog-item-1.png" alt="">
+				</div>
+			</div>
+			<div class="row align-items-center s-mrb-80">
+				<div class="col-sm-12 order-2 col-md-6 order-md-1 col-lg-5 blog-items-pic">
+					<img src="img/blog/shop-blog-item-2.png" alt="">
+				</div>
+				<div class="col-sm-12 order-1 col-md-6 order-md-2 col-lg-5 offset-lg-2 ">
+					<h4 class="product-title">SUPERB AUDIO EXPERIENCE OVER 25 YEARS</h4>
+					<h3 class="product-subtitle">Audio experience to enhance any lifestyle</h3>
+					<p class="product-info s-mrt-40">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+				</div>
+			</div>
+			<div class="row align-items-center s-mrb-80">
+				<div class="col-sm-12 col-md-6 col-lg-5 ">
+					<h4 class="product-title">SUPERB AUDIO EXPERIENCE OVER 25 YEARS</h4>
+					<h3 class="product-subtitle">Audio experience to enhance any lifestyle</h3>
+					<p class="product-info s-mrt-40">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-5 offset-lg-2 blog-items-pic">
+					<img src="img/blog/shop-blog-item-3.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Blog START -->
+	<!-- Stroe START -->
+	<section id="store">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-7">
+					<h4 class="product-title">OUR STORE</h4>
+					<h3 class="product-subtitle">Live the experience. Hear the magic.</h3>
+					<p class="product-info s-mrt-20">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<div class="btn-box">
+						<a href="#" class="h-4-btn-2">GO TO SHOP <i class="fas fa-chevron-right"></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="row s-mrt-40">
+				<div class="col-sm-12 col-md-5 s-mrb-30">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="box-item">
+								<img src="img/shop/store-1.png" alt="" class="img-w">
+								<div class="store-overley">
+									<h3>Headphone White</h3>
+									<p class="price">$ 590</p>
+									<a href="#">SHOP NOW</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="row">
+						<div class="col-sm-12 col-md-6 right-boxs">
+							<div class="box-item">
+								<img src="img/shop/store-2.png" alt="" class="img-w">
+								<div class="store-overley">
+									<h3>Headphone White</h3>
+									<p class="price">$ 590</p>
+									<a href="#">SHOP NOW</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-6 right-boxs">
+							<div class="box-item">
+								<img src="img/shop/store-3.png" alt="" class="img-w">
+								<div class="store-overley">
+									<h3>Headphone White</h3>
+									<p class="price">$ 590</p>
+									<a href="#">SHOP NOW</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-6 right-boxs">
+							<div class="box-item">
+								<img src="img/shop/store-4.png" alt="" class="img-w">
+								<div class="store-overley">
+									<h3>Headphone White</h3>
+									<p class="price">$ 590</p>
+									<a href="#">SHOP NOW</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-6 right-boxs">
+							<div class="box-item">
+								<img src="img/shop/store-5.png" alt="" class="img-w">
+								<div class="store-overley">
+									<h3>Headphone White</h3>
+									<p class="price">$ 590</p>
+									<a href="#">SHOP NOW</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Stroe END -->
+	<!-- Services START -->
+	<!-- Services END -->
+
+	<!-- Brends START -->
+	<!-- Brends END -->
+
+	<!-- Feedback START -->
+	<!-- Feedback END -->
+
+	<!-- News START -->
+	<!-- News END -->
+
+	<!-- Video START -->
+	<!-- Video END -->
+
+	<!-- Footer START -->
+	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- Bootstrap -->
