--- a/home-4.html
+++ b/home-4.html
@@ -203,21 +203,262 @@
 	</section>
 	<!-- Stroe END -->
 	<!-- Services START -->
+	<section id="services">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-4 col-lg-3 services-box">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="services-box-item item-rh item-chek">
+								<img src="img/icon/h-4-icon-1.png" alt="">
+								<h3>Wireless headphone</h3>
+								<p>With many different headphones to choose from, which ones are the best of the best? </p>
+								<a href="#">Read more</a>
+							</div>
+						</div>
+						<div class="col-sm-12">
+							<div class="services-box-item item-rh">
+								<img src="img/icon/h-4-icon-2.png" alt="">
+								<h3>On board volume</h3>
+								<p>With many different headphones to choose from, which ones are the best of the best? </p>
+								<a href="#">Read more</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-4 col-lg-6">
+					<div class="services-image">
+						<img src="img/content/h-4-sercies.png" alt="">
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-4 col-lg-3 services-box">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="services-box-item item-lf">
+								<img src="img/icon/h-4-icon-3.png" alt="">
+								<h3>Amazing battery life</h3>
+								<p>With many different headphones to choose from, which ones are the best of the best? </p>
+								<a href="#">Read more</a>
+							</div>
+						</div>
+						<div class="col-sm-12">
+							<div class="services-box-item item-lf">
+								<img src="img/icon/h-4-icon-4.png" alt="">
+								<h3>Universal USB Charging</h3>
+								<p>With many different headphones to choose from, which ones are the best of the best? </p>
+								<a href="#">Read more</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Services END -->
-
 	<!-- Brends START -->
+	<section id="brends">
+		<div class="container">
+			<div class="row">
+				<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-110">
+					<div class="item brends-item">
+						<img src="img/brends/brend-1.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-2.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-3.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-4.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-5.png">
+					</div>
+					<div class="item brends-item">
+						<img src="img/brends/brend-6.png">
+					</div>
+				</div>
+			</div>
+	</section>
 	<!-- Brends END -->
-
 	<!-- Feedback START -->
+	<section id="feedback">
+		<div class="row align-items-center my-row">
+			<div class="col-sm-12 col-md-12 col-lg-6 offset-lg-6">
+				<div id="owl-feedback" class="owl-carousel owl-theme">
+					<div class="item rev-item">
+						<div class="hed-rev">
+							<div class="feed-img  s-mrt-40">
+								<img src="img/content/h-4-feed-item-1.png" alt="">
+							</div>
+							<div class="feed-stars s-mrt-40">
+								<img src="img/icon/reviews-stars.png"><br>
+								<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+							</div>
+						</div>
+						<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+						<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+					</div>
+					<div class="item rev-item">
+						<div class="hed-rev">
+							<div class="feed-img  s-mrt-40">
+								<img src="img/content/h-4-feed-item-2.png" alt="">
+							</div>
+							<div class="feed-stars s-mrt-40">
+								<img src="img/icon/reviews-stars.png"><br>
+								<span class="author"><span>Eloise Smith,</span> USA Customer</span>
+							</div>
+						</div>
+						<h3 class="rev-name">PROFESSIONAL WORLDWIDE TEAM</h3>
+						<p class="rev-info">We leverage brand intelligence to develop meaningful content and engage people with actionable brand experiences that spark human connection!</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Feedback END -->
-
 	<!-- News START -->
+	<section id="news">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-sm-12 col-md-10 col-centered">
+					<h4 class="product-title">NEWS & INSIGHTS</h4>
+					<h3 class="product-subtitle">Latest news and articles</h3>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6 col-md-4 news-box">
+					<img src="img/blog/news-1.png" alt="" class="news-img">
+					<a href="#" class="news-cat">Category</a>
+					<a href="#" class="news-title">
+						<h3>What founders need to know <br> about finance</h3>
+					</a>
+					<p class="news-data">27 May, 2019</p>
+				</div>
+				<div class="col-sm-6 col-md-4 news-box">
+					<img src="img/blog/news-2.png" alt="" class="news-img">
+					<a href="#" class="news-cat">Category</a>
+					<a href="#" class="news-title">
+						<h3>What founders need to know <br> about finance</h3>
+					</a>
+					<p class="news-data">27 May, 2019</p>
+				</div>
+				<div class="col-sm-6 col-md-4 news-box">
+					<img src="img/blog/news-3.png" alt="" class="news-img">
+					<a href="#" class="news-cat">Category</a>
+					<a href="#" class="news-title">
+						<h3>What founders need to know <br> about finance</h3>
+					</a>
+					<p class="news-data">27 May, 2019</p>
+				</div>
+				<div class="col-sm-6 col-md-4 news-box">
+					<img src="img/blog/news-4.png" alt="" class="news-img">
+					<a href="#" class="news-cat">Category</a>
+					<a href="#" class="news-title">
+						<h3>What founders need to know <br> about finance</h3>
+					</a>
+					<p class="news-data">27 May, 2019</p>
+				</div>
+				<div class="col-sm-6 col-md-4 news-box">
+					<img src="img/blog/news-5.png" alt="" class="news-img">
+					<a href="#" class="news-cat">Category</a>
+					<a href="#" class="news-title">
+						<h3>What founders need to know <br> about finance</h3>
+					</a>
+					<p class="news-data">27 May, 2019</p>
+				</div>
+				<div class="col-sm-6 col-md-4 news-box">
+					<img src="img/blog/news-6.png" alt="" class="news-img">
+					<a href="#" class="news-cat">Category</a>
+					<a href="#" class="news-title">
+						<h3>What founders need to know <br> about finance</h3>
+					</a>
+					<p class="news-data">27 May, 2019</p>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- News END -->
-
 	<!-- Video START -->
+	<section id="player">
+		<div class="video-element" id="video-element">
+			<div class="video-element__poster" id="video-poster">
+				<img src="img/icon/h-4-play.png" class="btn-play">
+				<h3>Watch the promo video</h3>
+			</div>
+		</div>
+		<script type="text/template" id="video">
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/rMIk7rbtg-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</script>
+	</section>
 	<!-- Video END -->
-
 	<!-- Footer START -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-1 foot-col">
+					<h3>ABOUT US</h3>
+					<p class="s-mrt-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. </p>
+					<a href="#" class="s-mrt-40">Read more</a>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-2 offset-lg-1 foot-col-2 foot-col">
+					<h3>SERVICES</h3>
+					<ul>
+						<li><a href="#">Marketing consulting</a>
+						</li>
+						<li><a href="#">Business audit</a><span class="new">NEW</span>
+						</li>
+						<li><a href="#">Financial advisory</a>
+						</li>
+						<li><a href="#">Recruting services</a>
+						</li>
+						<li><a href="#">Branding and PR</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-3 foot-col">
+					<h3>USEFUL RESOURCES</h3>
+					<ul>
+						<li><a href="#">Partners</a>
+						</li>
+						<li><a href="#">Successful Cases</a>
+						</li>
+						<li><a href="#">Testimonials</a>
+						</li>
+						<li><a href="#">Portfolio</a>
+						</li>
+						<li><a href="#">Careers</a><span class="new">WE’RE HIRING</span>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-4 foot-col">
+					<h3>USEFUL RESOURCES</h3>
+					<div class="input-group input-send">
+						<input type="email" class="form-control email-input" placeholder="Your email">
+						<span class="input-group-btn">
+							<button class="send-email" type="submit">SEND</button>
+						</span>
+					</div>
+					<ul>
+						<li><a href="#">Contact us</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row s-mrt-60 footer-bottom">
+				<div class="col-sm-12 col-md-7 copyr">
+					<p>© 2020 SpecThemes. All Rights Reserved.</p>
+				</div>
+				<div class="col-sm-12 col-md-5 term">
+					<ul class="termlist">
+						<li><a href="#">Terms & Conditions</a></li>
+						<li><a href="#">Privacy Policy</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!-- Footer END -->
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
