--- a/home-4.html
+++ b/home-4.html
@@ -20,8 +20,57 @@
 
 <body>
 	<!-- Header START -->
+	<header class="navMenu">
+		<div class="container">
+			<nav>
+				<div class="logo"></div>
+				<ul class="nav-links">
+					<li><a href="#">About</a>
+					</li>
+					<li><a href="#">Features</a>
+					</li>
+					<li><a href="#" class="active-nav">Watch</a>
+					</li>
+					<li><a href="#">Price</a>
+					</li>
+					<li><a href="#">Shop</a>
+					</li>
+					<li><a href="#">Order</a>
+					</li>
+					<li><a href="#">Support</a>
+					</li>
+				</ul>
+				<ul class="shop-icon">
+					<li class="cart-count">
+						<a href="#">
+							<img src="img/icon/cart.png" alt="">
+							<div class="countcart">
+								<span>1</span>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#"><img src="img/icon/serach.png" alt=""></a>
+					</li>
+				</ul>
+				<div class="burger">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
+			</nav>
+		</div>
+	</header>
 	<!-- Header END -->
+	<!-- Hero START -->
+	<section id="hero">
+		<div class="container">
+			<div class="row">
 
+			</div>
+		</div>
+	</section>
+	<!-- Hero END -->
 	<!-- Top Product START -->
 	<section id="top-product">
 		<div class="container">
