--- a/home-4.html
+++ b/home-4.html
@@ -66,7 +66,53 @@
 	<section id="hero">
 		<div class="container">
 			<div class="row">
-
+				<div class="col-sm-1 hero-col-1">
+					<ul class="soc-list">
+						<li class="list-befor"><a href="#"><i class="fab fa-twitter"></i></a></li>
+						<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-9 hero-col-2">
+					<div class="row">
+						<div class="col-sm-12 hero-top">
+							<h3>True sound, To go</h3>
+							<h4>INTRODUCING GOLD ROSE</h4>
+						</div>
+						<div class="col-sm-12 col-md-8 col-lg-9">
+							<div class="new-box">
+								<img src="img/content/h-4-hero.png" alt="">
+								<h2>NEW</h2>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-4 col-lg-3">
+							<div class="info-hero">
+								<p class="hero-price">$ 59 <span>99</span></p>
+								<div class="chek-wrapper">
+									<div class="cheked"></div><span class="chek-product">ROSE GOLD</span>
+								</div>
+								<p class="hero-product-info">Choose from three sizes of soft, flexible silicone tips that click into place.</p>
+								<div class="btn-box">
+									<a href="#" class="h-4-btn-3">EXPLORE MORE <i class="fas fa-chevron-right"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-2 hero-col-3">
+					<div class="left-hero">
+						<h3 class="new-sound">NEW SOUND</h3>
+					</div>
+				</div>
+			</div>
+			<div class="row justify-content-center s-mrt-30 m-dn">
+				<div class="col-sm-12 col-md-10 col-centered">
+					<ul class="hero-bottom-list">
+						<li class="last"><a href="#">DELIGHTFUL</a></li>
+						<li class="all-list"><a href="#">AMAZING</a></li>
+						<li class="all-list first-list"><a href="#">WIRELESS</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -85,22 +131,22 @@
 					<img src="img/products/top-product.png" alt="" class="product-rev">
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-4 offset-lg-2">
-						<h4 class="product-name">The best headphones of 2020</h4>
-						<p class="product-info">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
-						<div class="products-view">
-							<div class="product-item-1">
-								<img src="img/products/product-item-1.png" alt="">
-							</div>
-							<div class="product-item-2">
-								<img src="img/products/product-item-2.png" alt="">
-								<div class="basket">
-									<i class="fas fa-shopping-basket"></i>
-								</div>
-							</div>
-							<div class="product-item-3">
-								<img src="img/products/product-item-3.png" alt="">
+					<h4 class="product-name">The best headphones of 2020</h4>
+					<p class="product-info">With many different headphones to choose from, which ones are the best of the best? Here's a look at CNET's top picks -- from full-size models to tiny wireless earbuds.</p>
+					<div class="products-view">
+						<div class="product-item-1">
+							<img src="img/products/product-item-1.png" alt="">
+						</div>
+						<div class="product-item-2">
+							<img src="img/products/product-item-2.png" alt="">
+							<div class="basket">
+								<i class="fas fa-shopping-basket"></i>
 							</div>
 						</div>
+						<div class="product-item-3">
+							<img src="img/products/product-item-3.png" alt="">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
