--- a/home-5.html
+++ b/home-5.html
@@ -11,16 +11,57 @@
 	<!-- Font-Awesome -->
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
 	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/styles-5.css">
 </head>
 
 <body>
-	<!-- Navbar START -->
-	<!-- Navbar END -->
+	<!-- Header START -->
+	<!-- Header END -->
+
+	<!-- Hero START -->
+	<!-- Hero END -->
+
+	<!-- Video START -->
+	<!-- Video END -->
+
+	<!-- Services START -->
+	<!-- Services END -->
+
+	<!-- Sturtups START -->
+	<!-- Sturtups END -->
+
+	<!-- Feedback START -->
+	<!-- Feedback END -->
+
+	<!-- Portfolio START -->
+	<!-- Portfolio END -->
+
+	<!-- Blog START -->
+	<!-- Blog END -->
+
+	<!-- Awards START -->
+	<!-- Awards END -->
+
+	<!-- Contact START -->
+	<!-- Contact END -->
+
+	<!-- Footer START -->
+	<!-- Footer END -->
+	
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
-	<!-- Main JS -->
-	<script src="js/main.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Popper -->
+	<script src="js/popper.min.js"></script>
+	<!-- Include js plugin -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- Main-2 JS -->
+	<script src="js/main-5.js"></script>
 </body>
 
 </html>
