--- a/home-4.html
+++ b/home-4.html
@@ -528,7 +528,7 @@
 					</ul>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-4 foot-col">
-					<h3>USEFUL RESOURCES</h3>
+					<h3>LET’S STAY CONNECTED</h3>
 					<div class="input-group input-send">
 						<input type="email" class="form-control email-input" placeholder="Your email">
 						<span class="input-group-btn">
