--- a/home-5.html
+++ b/home-5.html
@@ -543,12 +543,114 @@
 	</section>
 	<!-- Blog END -->
 	<!-- Awards START -->
+	<section id="awards">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-md-2 offset-md-2">
+					<div class="awards-item">
+						<img src="img/icon/h-5-aw-1.png" alt="">
+					</div>
+					<p class="awards-title">10 AWARDS</p>
+				</div>
+				<div class="col-sm-6 col-md-2 offset-md-2">
+					<div class="awards-item">
+						<img src="img/icon/h-5-aw-2.png" alt="">
+					</div>
+					<p class="awards-title">8 BRANCHES</p>
+				</div>
+			</div>
+			<div class="row justify-content-center s-mrt-50">
+				<div class="col-sm-6 col-md-2 offset-md-1 col-centered">
+					<div class="awards-item">
+						<img src="img/icon/h-5-aw-3.png" alt="">
+					</div>
+					<p class="awards-title">12K STARTUPS</p>
+				</div>
+				<div class="col-sm-6 col-md-2 offset-md-2 col-centered">
+					<div class="awards-item">
+						<img src="img/icon/h-5-aw-4.png" alt="">
+					</div>
+					<p class="awards-title">270 PROJECTS</p>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Awards END -->
-
 	<!-- Contact START -->
+	<section id="contact">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h3 class="contact-title">Let’s work together</h3>
+					<p class="contact-info">We work with ecosystem leaders, corporations and startups worldwide. <br> How can we help you?</p>
+					<a href="#" class="h-5-btn-2 contact-btn">LEARN MORE</a>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Contact END -->
-
 	<!-- Footer START -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-1 foot-col">
+					<h3>ABOUT US</h3>
+					<p class="s-mrt-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. </p>
+					<a href="#" class="s-mrt-40">Read more</a>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-2 offset-lg-1 foot-col-2 foot-col">
+					<h3>SERVICES</h3>
+					<ul>
+						<li><a href="#">Marketing consulting</a>
+						</li>
+						<li><a href="#">Business audit</a><span class="new">NEW</span>
+						</li>
+						<li><a href="#">Financial advisory</a>
+						</li>
+						<li><a href="#">Recruting services</a>
+						</li>
+						<li><a href="#">Branding and PR</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-3 foot-col">
+					<h3>USEFUL RESOURCES</h3>
+					<ul>
+						<li><a href="#">Partners</a>
+						</li>
+						<li><a href="#">Successful Cases</a>
+						</li>
+						<li><a href="#">Testimonials</a>
+						</li>
+						<li><a href="#">Portfolio</a>
+						</li>
+						<li><a href="#">Careers</a><span class="new">WE’RE HIRING</span>
+						</li>
+					</ul>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-3 foot-col-4 foot-col">
+					<h3>LET’S STAY CONNECTED</h3>
+					<div class="input-group input-send">
+						<input type="email" class="form-control email-input" placeholder="Your email">
+						<span class="input-group-btn">
+							<button class="send-email" type="submit">SEND</button>
+						</span>
+					</div>
+				</div>
+			</div>
+			<div class="row s-mrt-60 footer-bottom">
+				<div class="col-sm-12 col-md-7 copyr">
+					<p>© 2020 SpecThemes. All Rights Reserved.</p>
+				</div>
+				<div class="col-sm-12 col-md-5 term">
+					<ul class="termlist">
+						<li><a href="#">Terms & Conditions</a></li>
+						<li><a href="#">Privacy Policy</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!-- Footer END -->
 
 	<!-- Jquery -->
