--- a/home-6.html
+++ b/home-6.html
@@ -11,16 +11,114 @@
 	<!-- Font-Awesome -->
 	<link rel="stylesheet" type="text/css" href="css/fontawesome-all.css">
 	<!-- Main Styles -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
+	<!-- Main Styles -->
+	<link rel="stylesheet" type="text/css" href="css/styles-6.css">
 </head>
 
 <body>
-	<!-- Navbar START -->
-	<!-- Navbar END -->
+	<!-- Header START -->
+	<!-- Header END -->
+
+	<!-- Hero START -->
+	<section id="hero">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- Hero END -->
+	<!-- Brends START -->
+	<section id="brends">
+
+	</section>
+	<!-- Brends END -->
+	<!-- Software START -->
+	<section id="software">
+		<div class="container">
+			<div class="row">
+			</div>
+		</div>
+	</section>
+	<!-- Software END -->
+	<!-- Counts START -->
+	<section id="count">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- Counts END -->
+	<!-- About us START -->
+	<section id="about">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- About us END -->
+	<!-- Start tabs START -->
+	<section id="start-tabs">
+		<div class="row"></div>
+	</section>
+	<!-- Start tabs END -->
+	<!-- Demo START -->
+	<section id="demo">
+		<div class="container">
+			<div class="row">
+
+			</div>
+		</div>
+	</section>
+	<!-- Demo END -->
+	<!-- Pricing START -->
+	<section id="pricing">
+		<div class="continer">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- Pricing END -->
+	<!-- We work START -->
+	<section id="we-work">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- We work END -->
+	<!-- Reviews START -->
+	<section id=revies"">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- Reviews END -->
+	<!-- News START -->
+	<section id="news">
+		<div class="container">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- News END -->
+	<!-- Subbscribe START -->
+	<section id="subbscribe">
+		<div class="continer">
+			<div class="row"></div>
+		</div>
+	</section>
+	<!-- Subbscribe END -->
+	
+	<!-- Footer START -->
+	<!-- Footer END -->
+
 	<!-- Jquery -->
 	<script src="js/jquery.min.js"></script>
-	<!-- Main JS -->
-	<script src="js/main.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Popper -->
+	<script src="js/popper.min.js"></script>
+	<!-- Include js plugin -->
+	<script src="js/owl.carousel.min.js"></script>
+	<!-- Main-2 JS -->
+	<script src="js/main-6.js"></script>
 </body>
 
 </html>
