--- a/home-6.html
+++ b/home-6.html
@@ -20,8 +20,37 @@
 
 <body>
 	<!-- Header START -->
+	<header class="navMenu">
+		<div class="container">
+			<nav>
+				<div class="logo"></div>
+				<ul class="nav-links">
+					<li><a href="#" class="item-active-nav">Home</a>
+					</li>
+					<li><a href="#">About</a>
+					</li>
+					<li><a href="#">Projects</a>
+					</li>
+					<li><a href="#">Services</a>
+					</li>
+					<li><a href="#">Blog</a>
+					</li>
+					<li><a href="#">Contacts</a>
+					</li>
+					<li><a href="#"><img src="img/icon/serach.png" alt=""></a>
+					</li>
+					<li><a href="#" class="free-btn">FREE TRIAL</a>
+					</li>
+				</ul>
+				<div class="burger">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
+			</nav>
+		</div>
+	</header>
 	<!-- Header END -->
-
 	<!-- Hero START -->
 	<section id="hero">
 		<div class="container">
@@ -105,7 +134,7 @@
 		</div>
 	</section>
 	<!-- Subbscribe END -->
-	
+
 	<!-- Footer START -->
 	<!-- Footer END -->
 
