--- a/home-6.html
+++ b/home-6.html
@@ -54,19 +54,71 @@
 	<!-- Hero START -->
 	<section id="hero">
 		<div class="container">
-			<div class="row"></div>
+			<div class="row align-items-center">
+				<div class="col-sm-12 col-md-5 hero-info">
+					<h1 class="h-6-hero-title">We build teams that build your future <span>software.</span></h1>
+					<p class="h-6-hero-info">Your partner for incredible mobile and web products. We provide tools to prepare for a process automation project</p>
+					<a href="#" class="h-6-btn-2 hero-btn">GET STARTED</a>
+					<p class="h-6-hero-topik">FREE TRIAL, MONEY BACK GUARANTEE</p>
+				</div>
+				<div class="col-sm-12 col-md-7 hero-image">
+					<img src="img/content/h-6-hero.png" alt="">
+				</div>
+			</div>
+			<div class="col-sm-12">
+				<div class="scroll">
+					<img src="img/icon/scroll-down.png" alt="arrowIcon">
+					<p>scroll down</p>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- Hero END -->
 	<!-- Brends START -->
 	<section id="brends">
-
+		<div id="owl-brends" class="owl-carousel owl-theme s-mrb-110 s-mrt-50">
+			<div class="item brends-item">
+				<img src="img/brends/brend-1.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-2.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-3.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-4.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-5.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-6.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-1.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-2.png">
+			</div>
+			<div class="item brends-item">
+				<img src="img/brends/brend-3.png">
+			</div>
+		</div>
 	</section>
 	<!-- Brends END -->
 	<!-- Software START -->
 	<section id="software">
 		<div class="container">
-			<div class="row">
+			<div class="row align-items-center">
+				<div class="col-sm-12 col-md-5 softwar-info">
+					<h3 class="h-6-subtitle">SOFTWARE ENGINEERING</h3>
+					<h2 class="h-6-title s-mrt-10">A harmony of software  house skills and digital agency sensibility</h2>
+					<p class="h-6-info s-mrt-25">Our process begins with a collaborative and holistic assessment to gain a robust understand of you, your business and key stakeholders. We will explore your business problems and needs co-creatively.</p>
+				</div>
+				<div class="col-sm-12 col-md-7 softwar-img">
+					<img src="img/content/h-6-soft.png" alt="">
+				</div>
 			</div>
 		</div>
 	</section>
@@ -74,7 +126,9 @@
 	<!-- Counts START -->
 	<section id="count">
 		<div class="container">
-			<div class="row"></div>
+			<div class="row">
+				
+			</div>
 		</div>
 	</section>
 	<!-- Counts END -->
