--- a/home-6.html
+++ b/home-6.html
@@ -126,8 +126,23 @@
 	<!-- Counts START -->
 	<section id="count">
 		<div class="container">
-			<div class="row">
-				
+			<div class="row s-mrt-80 box-shad">
+				<div class="col-sm-6 col-md-3 count-item">
+					<h3>1,955,000 <i class="fas fa-dollar-sign"></i></h3>
+					<p>AMOUNT PROVIDED FOR INVESTMENT</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item">
+					<h3>9.49 <i class="fas fa-percent"></i></h3>
+					<p>CURRENT AVERAGE  INTEREST RATE</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item">
+					<h3>54 <i class="far fa-calendar-alt"></i></h3>
+					<p>CURRENT AVERAGE REPAYMENT TERM</p>
+				</div>
+				<div class="col-sm-6 col-md-3 count-item">
+					<h3>1334 <i class="far fa-user"></i></h3>
+					<p>CURRENT INVESTORS  REGISTERED</p>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -135,13 +150,31 @@
 	<!-- About us START -->
 	<section id="about">
 		<div class="container">
-			<div class="row"></div>
+			<div class="row">
+				<div class="row align-items-center">
+					<div class="col-sm-12 col-md-6 about-img">
+						<img src="img/content/h-6-about.png" alt="">
+					</div>
+					<div class="col-sm-12 col-md-5 offset-md-1 about-info">
+						<h3 class="h-6-subtitle">ABOUT US</h3>
+						<h2 class="h-6-title s-mrt-10">Our job is to help our clients</h2>
+						<p class="h-6-info s-mrt-25">Our process begins with a collaborative and holistic assessment to gain a robust understand of you, your business and key stakeholders. We will explore your business problems and needs co-creatively.</p>
+						<p class="h-6-info s-mrt-25">Our process begins with a collaborative and holistic assessment to gain a robust understand of you, your business and key stakeholders. We will explore your business problems and needs co-creatively.</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- About us END -->
 	<!-- Start tabs START -->
 	<section id="start-tabs">
-		<div class="row"></div>
+		<div class="row">
+			<div class="col-sm-12">
+				<h3 class="start-title">How to start <span>cooperating ?</span></h3>
+				<p class="start-sub">It is fast, easy and profitable</p>
+			</div>
+			div.
+		</div>
 	</section>
 	<!-- Start tabs END -->
 	<!-- Demo START -->
