--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<div class="col-md-12 col-lg-4 text-center">
 						<div class="servicesboxs">
 							<img src="img/content/services-1.png" class="" alt="services-1">
-							<h4 class="s-mrt-50">Digital marketing & sales</h4>
+							<a href="#"><h4 class="s-mrt-50 services-title">Digital marketing & sales</h4></a>
 							<p class="s-mrt-20 services-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate.</p> <a href="#"
 								class="textcolor s-mrt-20">Learn More</a>
 						</div>
@@ -160,7 +160,7 @@
 					<div class="col-md-12 col-lg-4 text-center">
 						<div class="servicesboxs">
 							<img src="img/content/services-2.png" class="" alt="services-2">
-							<h4 class="s-mrt-50">Digital marketing & sales</h4>
+							<a href="#"><h4 class="s-mrt-50 services-title">Digital marketing & sales</h4></a>
 							<p class="s-mrt-20 services-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate.</p> <a href="#"
 								class="textcolor s-mrt-20">Learn More</a>
 						</div>
@@ -168,7 +168,7 @@
 					<div class="col-md-12 col-lg-4 text-center">
 						<div class="servicesboxs">
 							<img src="img/content/services-3.png" class="" alt="services-3">
-							<h4 class="s-mrt-50 services-title">Digital marketing & sales</h4>
+							<a href="#"><h4 class="s-mrt-50 services-title">Digital marketing & sales</h4></a>
 							<p class="s-mrt-20 services-subtitle">Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate. Aliquip labore dolor aute nulla nulla culpa do ut ad laboris ut cillum non voluptate.</p> <a href="#"
 								class="textcolor s-mrt-20">Learn More</a>
 						</div>
