--- a/home-4.html
+++ b/home-4.html
@@ -139,9 +139,9 @@
 						</div>
 						<div class="product-item-2">
 							<img src="img/products/product-item-2.png" alt="">
-							<div class="basket">
+							<a href="#"><div class="basket">
 								<i class="fas fa-shopping-basket"></i>
-							</div>
+							</div></a>
 						</div>
 						<div class="product-item-3">
 							<img src="img/products/product-item-3.png" alt="">
